stopped the image board from overflowing since i will be working on the slider using drag api from framerMotion imported the motion component and added it to most of the elements that will be animated

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -109,4 +109,11 @@ body {
             }
         }
     }
+
+    .ImgBoard {
+        @include u1.block_display();
+        width: 100%;
+        padding: 15px $sidePadding;
+        margin: 0 0 50px;
+    }
 }
